--- a/src/views/orders/Orders.css
+++ b/src/views/orders/Orders.css
@@ -8,3 +8,49 @@
     margin-left: 20px;
     color: white;
 }
+
+.ordersPage {
+    margin: 30px 0 0 50px;
+}
+
+.completeButton {
+    border: 0;
+}
+
+.Table {
+    display: inline-block;
+    margin-top: 20px;
+    width: 95%;
+    height: 70vh;
+}
+
+table {
+    width: 100%;
+    height: 70vh;
+}
+
+.completeTable {
+    display: block;
+    height: 100%;
+    overflow-y: scroll;
+}
+
+.pendingTable {
+    display: block;
+    height: 100%;
+    overflow-y: scroll;
+}
+
+.userColumn, .menuColumn, .toppingColumn {
+    padding-left: 20px;
+}
+
+.quantityColumn, .totalColumn, .statusColumn {
+    text-align: center;
+}
+
+table, thead, th, td, tr{
+    border: 1px solid;
+    border-color: white;
+    border-collapse: collapse;
+}
