--- a/src/views/product/Product.css
+++ b/src/views/product/Product.css
@@ -29,3 +29,60 @@
     padding: 10px;
     width: 100%;
 }
+
+
+
+
+
+
+
+body.active-modal {
+    overflow-y: hidden;
+}
+
+.btn-modal {
+    padding: 10px 20px;
+    display: block;
+    margin: 100px auto 0;
+    font-size: 18px;
+}
+
+.modal, .overlay {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: fixed;
+}
+
+.overlay {
+    background: rgba(49,49,49,0.2);
+}
+.modal-content {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    line-height: 1.4;
+    background: #fdfdfd;
+    padding: 14px 28px;
+    border-radius: 3px;
+    max-width: 600px;
+    min-width: 300px;
+    color: black;
+}
+
+.modal-content h2 {
+    font-weight: bold;
+    color: black;
+}
+
+.close-modal {
+    position: absolute;
+    /* top: 10px; */
+    right: 0px;
+    padding: 5px 7px;
+    
+}
