--- a/src/views/orders/Orders.css
+++ b/src/views/orders/Orders.css
@@ -1,12 +1,14 @@
 .statusChangeBttn {
     width: 200px;
-    margin-left: 100px;
+    margin-left: 60px;
     display: inline;
 }
 
 .statusChangeBttn a {
-    margin-left: 20px;
-    color: white;
+    margin: 20px;
+    padding: 10px;
+    background-color: var(--first-color-light);
+    color: var(--first-color);
 }
 
 .ordersPage {
@@ -18,15 +20,15 @@
 }
 
 .Table {
-    display: inline-block;
-    margin-top: 20px;
+    margin: 40px 0;
     width: 95%;
-    height: 70vh;
+    /* height: 70vh; */
+    overflow-y: scroll;
 }
 
 table {
     width: 100%;
-    height: 70vh;
+    /* height: 70vh; */
 }
 
 .completeTable {
@@ -47,6 +49,14 @@ table {
 
 .quantityColumn, .totalColumn, .statusColumn {
     text-align: center;
+}
+
+.trows {
+    height: 50px;
+}
+
+h1 {
+    margin-bottom: 30px;
 }
 
 table, thead, th, td, tr{
