--- a/src/views/cart/Cart.css
+++ b/src/views/cart/Cart.css
@@ -1,12 +1,20 @@
 .cart {
-    width: 80%;
+    width: 100%;
+    height: 100%;
     margin: 0 auto;
-    padding: 20px;
+    background-color: white;
   }
   
-  .cart h2 {
+  h1 {
+    margin: 0;
     text-align: center;
     margin-bottom: 20px;
+    color: black;
+    background-color: white;
+  }
+
+  .order h1 {
+    margin: 0;
   }
   
   .table {
@@ -14,15 +22,20 @@
     border-collapse: collapse;
   }
   
-  .table th,
   .table td {
     padding: 10px;
     text-align: left;
     border: 1px solid #ddd;
+    color: grey;
   }
   
+  .table tr,
   .table th {
+    padding: 10px;
+    text-align: left;
+    border: 1px solid #ddd;
     background-color: #ffffff;
+    color: black;
   }
   
   .menuColumn {
