--- a/src/views/cart/Cart.css
+++ b/src/views/cart/Cart.css
@@ -5,7 +5,7 @@
     background-color: white;
   }
   
-  h1 {
+  .cartorderpage h1 {
     margin: 0;
     text-align: center;
     margin-bottom: 20px;
